# banking-modern-datastack

./: README.md  docker-compose.yml  dockerfile-airflow.dockerfile  pyproject.toml  visualization.pbix
.github/workflows/: cd.yml  ci.yml
